2014-09-10  Saam Barati  <saambarati1@gmail.com>

        TypeSet needs a mode where it no longer profiles structure shapes
        https://bugs.webkit.org/show_bug.cgi?id=136263

        Reviewed by Filip Pizlo.

        The TypeSet data structure used to gather as many StructureShape
        objects as it encountered during type profiling. But, this meant 
        that there was no upper limit on how many objects it could allocate. 
        This patch places a fixed upper bound on the number of StructureShapes
        allocated per TypeSet to prevent using too much memory for little gain
        in type profiling usefulness.

        StructureShape objects are now also aware of when they are created
        from Structures which are dictionaries.

        In total, this patch lays the final groundwork needed in refactoring 
        the inspector protocol for the type profiler.

        * runtime/Structure.cpp:
        (JSC::Structure::toStructureShape):
        * runtime/TypeProfiler.cpp:
        (JSC::TypeProfiler::typeInformationForExpressionAtOffset):
        * runtime/TypeSet.cpp:
        (JSC::TypeSet::TypeSet):
        (JSC::TypeSet::addTypeInformation):
        (JSC::StructureShape::StructureShape):
        (JSC::StructureShape::toJSONString):
        (JSC::StructureShape::enterDictionaryMode):
        * runtime/TypeSet.h:
        (JSC::TypeSet::isOverflown):
        * tests/typeProfiler/dictionary-mode.js: Added.
        (wrapper):
        * tests/typeProfiler/driver/driver.js:
        * tests/typeProfiler/overflow.js: Added.
        (wrapper.Proto):
        (wrapper):

2014-09-10  Peter Gal  <galpeter@inf.u-szeged.hu>

        [MIPS] branch32WithPatch missing
        https://bugs.webkit.org/show_bug.cgi?id=136696

        Reviewed by Michael Saboff.

        Added the missing branch32WithPatch. The implementation
        is currently the same as the branchPtrithPatch because
        the macro assembler supports only 32 bit MIPS.
