@@ -1,3 +1,15 @@
+2014-09-10  Julien Brianceau   <jbriance@cisco.com>
+
+        [mips] Add missing parts and fix LLINT mips backend
+        https://bugs.webkit.org/show_bug.cgi?id=136706
+
+        Reviewed by Michael Saboff.
+
+        * llint/LowLevelInterpreter.asm: Fix invalid CalleeSave register number.
+        Implement initPCRelative and setEntryAddress macros.
+        * llint/LowLevelInterpreter32_64.asm: Fix register distribution in
+        doVMEntry macro.
+
 2014-09-10  Saam Barati  <saambarati1@gmail.com>
 
         TypeSet needs a mode where it no longer profiles structure shapes
